--- a/src/app/lazy/auth/auth.component.html
+++ b/src/app/lazy/auth/auth.component.html
@@ -1,30 +1,1 @@
-<div class="flex align-items-center justify-content-center mt-6">
-    <div class="surface-card p-4 shadow-5 my-6 border-round w-full lg:w-6">
-        <div class="text-center mb-5">
-            <div class="text-900 text-3xl font-medium mb-3">Project<span style="color: #C02929;">X</span></div>
-            <span class="text-600 font-medium line-height-3">Don't have an account?</span>
-            <a class="font-medium no-underline ml-2 cursor-pointer" style="color: #C02929;">Create today!</a>
-        </div>
-
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-            <div>
-                <label for="email" class="block text-900 font-medium mb-2">Email</label>
-                <input id="email" type="text" pInputText class="w-full mb-3" placeholder="example@abcd.com" formControlName="email">
-
-                <label for="password" class="block text-900 font-medium mb-2">Password</label>
-                <input id="password" type="password" pInputText class="w-full mb-3" formControlName="password">
-
-                <div class="flex align-items-center justify-content-between mb-6">
-                    <div class="flex align-items-center">
-                        <p-checkbox id="rememberme" styleClass="mr-2"></p-checkbox>
-                        <label for="rememberme">Remember me</label>
-                    </div>
-                    <a class="font-medium no-underline ml-2 text-right cursor-pointer" style="color: #C02929;">Forgot
-                        your password?</a>
-                </div>
-
-                <button type="submit" pButton pRipple label="Sign In" icon="pi pi-user" class="w-full p-button-danger"></button>
-            </div>
-        </form>
-    </div>
-</div>
+<router-outlet></router-outlet>
