--- a/src/app/lazy/dashboard/dashboard.component.html
+++ b/src/app/lazy/dashboard/dashboard.component.html
@@ -1,4 +1,11 @@
 <h2>This one's the dashboard</h2>
+
+<h3>-------------------Date Pipe--------------------------------</h3>
+<p>
+    Task was assigned <strong>{{assignedDate | niceDateFormat}}</strong>
+    <br><br>
+    Deadline for the task is <strong>{{deadlineDate | niceDeadlineFormat}}</strong>
+</p>
 <p>
     <button (click)="logout()">Logout</button>
 </p>
