build:oauth-outlook

--- a/src/app/lazy/auth/components/login/login.component.html
+++ b/src/app/lazy/auth/components/login/login.component.html
@@ -15,3 +15,7 @@
 
     <button type="submit">Login</button>
 </form>
+
+<p>
+    <a href="http://localhost:3000/auth/outlook">Sign in with Outlook</a>
+</p>
