--- a/src/app/lazy/dashboard/dashboard.component.html
+++ b/src/app/lazy/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <h2>This one's the dashboard</h2>
 
+<a routerLink='/sample'>Go to Sample</a>
 <h3>-------------------Date Pipe--------------------------------</h3>
 <p>
     Task was assigned <strong>{{assignedDate | niceDateFormat}}</strong>
