--- a/src/app/lazy/auth/components/login/login.component.html
+++ b/src/app/lazy/auth/components/login/login.component.html
@@ -1,21 +1,27 @@
-<h3>Enter your credentials to login</h3>
-<h5 style="color: gray;">Don't have an Account? <a routerLink='/auth/register'>Create One</a></h5>
+<h3>{{'login.main' | translate}}</h3>
+<h5 style="color: gray;">{{'login.subheading1' | translate}}<a routerLink='/auth/register'>{{'login.subheading2' | translate}}</a></h5>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <p>
-        <label for="email">Email</label>
+        <label for="email">{{'login.loginform.email' | translate}}</label>
         <br><br>
         <input type="text" id="email" name="email" placeholder="example@abc.com" formControlName="email">
     </p>
 
     <p>
-        <label for="password">Password</label>
+        <label for="password">{{'login.loginform.password' | translate}}</label>
         <br><br>
         <input type="password" placeholder="Password" formControlName="password">
     </p>
 
-    <button type="submit">Login</button>
+    <button type="submit">{{'login.loginform.login' | translate}}</button>
 </form>
 
 <p>
-    <a href="http://localhost:3000/auth/outlook">Sign in with Outlook</a>
+    <a href="http://localhost:3000/auth/outlook">{{'login.outlooktext' | translate}}</a>
+</p>
+<p>
+    <button (click)="selectedLanguage('en')">English</button>
+</p>
+<p>
+    <button (click)="selectedLanguage('de')">German</button>
 </p>
