--- a/src/app/lazy/auth/components/register/register.component.html
+++ b/src/app/lazy/auth/components/register/register.component.html
@@ -1,29 +1,29 @@
-<h3>Register to get started</h3>
-<h5 style="color: gray;">Already have an Account? <a routerLink='/auth/login'>Sign In</a></h5>
+<h3>{{'register.main' | translate}}</h3>
+<h5 style="color: gray;">{{'register.subheading1' | translate}} <a routerLink='/auth/login'>{{'register.subheading2' | translate}}</a></h5>
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <p>
-        <label for="email">Email</label>
+        <label for="email">{{'register.registerform.email' | translate}}</label>
         <br><br>
         <input type="email" placeholder="example@abc.com" formControlName="email">
     </p>
 
     <p>
-        <label for="username">Username</label>
+        <label for="username">{{'register.registerform.username' | translate}}</label>
         <br><br>
         <input type="text" placeholder="Username" formControlName="username">
     </p>
 
     <p>
-        <label for="password">Password</label>
+        <label for="password">{{'register.registerform.password' | translate}}</label>
         <br><br>
         <input type="password" placeholder="Password" formControlName="password">
     </p>
 
     <p>
-        <label for="confirmpassword">Confirm Password</label>
+        <label for="confirmpassword">{{'register.registerform.confirmpassword' | translate}}</label>
         <br><br>
         <input type="password" placeholder="Confirm Password" formControlName="confirmpassword">
     </p>
 
-    <button type="submit">Register</button>
+    <button type="submit">{{'register.registerform.submitbutton' | translate}}</button>
 </form>
