--- a/src/app/lazy/auth/components/register/register.component.html
+++ b/src/app/lazy/auth/components/register/register.component.html
@@ -3,32 +3,32 @@
         <form nz-form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
             <h4 nz-typography>Creat<span style="color: red;">e</span>&nbsp;Accoun<span style="color: red;">t</span></h4>
             <nz-form-item>
-                <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">E-mail</nz-form-label>
+                <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">{{'register.email' | translate}}</nz-form-label>
                 <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="The input is not valid E-mail!">
                     <input nz-input type="email" formControlName="email" id="email" />
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item>
-                <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="username">Username</nz-form-label>
+                <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="username">{{'register.username' | translate}}</nz-form-label>
                 <nz-form-control [nzSm]="14" [nzXs]="24">
                     <input nz-input formControlName="username" id="username"/>
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item>
-                <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="password" nzRequired>Password</nz-form-label>
+                <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="password" nzRequired>{{'register.password' | translate}}</nz-form-label>
                 <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input your password!">
                     <input nz-input type="password" id="password" formControlName="password"/>
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item>
-                <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="confirmpassword" nzRequired>Confirm Password</nz-form-label>
+                <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="confirmpassword" nzRequired>{{'register.confirmpassword' | translate}}</nz-form-label>
                 <nz-form-control [nzSm]="14" [nzXs]="24">
                     <input nz-input type="password" formControlName="confirmpassword" id="checkPassword" />
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item nz-row class="register-area">
                 <nz-form-control [nzSpan]="14" [nzOffset]="6">
-                    <button type="submit" nz-button nzType="primary">Register</button>
+                    <button type="submit" nz-button nzType="primary">{{'register.button' | translate}}</button>
                 </nz-form-control>
             </nz-form-item>
         </form>
