--- a/src/app/lazy/auth/components/register/register.component.html
+++ b/src/app/lazy/auth/components/register/register.component.html
@@ -32,5 +32,9 @@
                 </nz-form-control>
             </nz-form-item>
         </form>
+        <div style="margin-left: 50px;margin-top: 20px;">
+            <span style="font-weight: bold;margin-right: 73px;">O<span style="color: red;">R</span></span>
+            <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'" style="background-color: #026FC0;border-color: #026FC0;" (click)="outlookRegister()">Sign Up with Outlook</button>
+        </div>
     </div>
 </div>
