--- a/src/app/lazy/dashboard/components/caching/caching.component.html
+++ b/src/app/lazy/dashboard/components/caching/caching.component.html
@@ -1,4 +1,4 @@
-<nz-table [nzData]="tableData">
+<nz-table [nzData]="tableData" style="margin-top: 20px;">
     <thead>
         <tr>
             <th>Name</th>
@@ -16,3 +16,4 @@
 </nz-table>
 <button (click)="updateTable()" nz-button nzType="primary">Update</button>
 <button (click)="deleteTableData()" nz-button nzType="primary" nzDanger style="margin-left: 8px;">Delete</button>
+<br><br>
